Update from CJS to ESM

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pay-chart",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Node.js app for reading PDF paystubs.",
+  "type": "module",
   "main": "bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
