--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,22 +13,23 @@
     "indent": ["error", 2, {
       "SwitchCase": 1
     }],
-    "no-multi-spaces": "error",
-    "space-before-function-paren": ["error", {
-      "anonymous": "always",
-      "named": "never",
-      "asyncArrow": "always"
-    }],
-    "operator-linebreak": ["error", "after"],
     "semi": ["error", "always"],
     "semi-style": ["error", "last"],
     "semi-spacing": ["error", {
       "before": false,
       "after": true
     }],
-    "dot-location": ["error", "object"],
     "comma-dangle": ["error", "always-multiline"],
     "comma-style": ["error", "last"],
-    "no-trailing-spaces": "error"
+    "dot-location": ["error", "object"],
+    "operator-linebreak": ["error", "after"],
+    "eol-last": ["error", "always"],
+    "space-before-function-paren": ["error", {
+      "anonymous": "always",
+      "named": "never",
+      "asyncArrow": "always"
+    }],
+    "no-trailing-spaces": "error",
+    "no-multi-spaces": "error"
   }
 }
